# ontmont

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  modules.rst  ontmont.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  ontmont.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  ontmont.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ontmont/: bundle.html  collect.html  datatypes.html  irs.html  plot.html  process.html  utils.html
docs/_build/html/_sources/: index.rst.txt
ontmont/: bundle.py  cli.py  collect.py  datatypes.py  irs.py  plot.py  process.py  utils.py
pysrc/ontmont/: bundle.py  datatypes.py  irenum.py  irs.py  utils.py
src/ontmont/: bundle.py  collect.py
tests/: test_bundle.py  test_collect.py  test_datatypes.py  test_irenum.py  test_irs.py  test_label_palindromes.py  test_process.py  test_utils.py
tests/data/: test.bam  test.bam.bai
